# getopt

./: CMakeLists.txt  getopt.c
